frontend/ui/src/styles/utilities/components/_container.scss
@use '../variables';

.container {
	width: 100%;
	max-width: 100%;

	&#{&}--left,
	&#{&}--center {
		margin-right: auto;
	}

	&#{&}--right,
	&#{&}--center {
		margin-left: auto;
	}

	@each $bp, $size in variables.$breakpoints {
		&#{&}--#{$bp} {
			width: $size;
		}
	}
}

